[gd_scene load_steps=57 format=3 uid="uid://brb0icctws8db"]

[ext_resource type="Script" path="res://scripts/gameplay_scripts/cobia.gd" id="1_bhlcw"]
[ext_resource type="AudioStream" uid="uid://b6eannh8lgcqi" path="res://assets/sound_effects/move_lane_2.wav" id="2_16oy4"]
[ext_resource type="Shader" path="res://shaders/hitflash.gdshader" id="2_d71ys"]
[ext_resource type="Texture2D" uid="uid://bsvm6bbxyldfy" path="res://assets/gamesprites/fake_shadow.png" id="2_ht68y"]
[ext_resource type="Texture2D" uid="uid://bwvgsx5j1xg43" path="res://assets/gamesprites/player/cobia_idle_sheet.png" id="2_nq0sg"]
[ext_resource type="AudioStream" uid="uid://ddjp2m5b237qi" path="res://assets/sound_effects/got_damaged.wav" id="3_f60s8"]
[ext_resource type="Texture2D" uid="uid://ddi6bu77uxvy6" path="res://assets/gamesprites/player/cobia_death.png" id="3_qktkv"]
[ext_resource type="Texture2D" uid="uid://dee0tpr6cuwxk" path="res://assets/gamesprites/player/cobia_run_transition_sheet.png" id="3_vp4te"]
[ext_resource type="AudioStream" uid="uid://ckqcli4ojm4qu" path="res://assets/sound_effects/collect_seed.wav" id="4_bglrd"]
[ext_resource type="Texture2D" uid="uid://hwkpgl1vlnjj" path="res://assets/gamesprites/player/cobia_running_sheet.png" id="4_ch8lo"]
[ext_resource type="AudioStream" uid="uid://3pkukx0eygbn" path="res://assets/sound_effects/death_4.wav" id="5_heybk"]
[ext_resource type="Texture2D" uid="uid://c0uh2nngrrogq" path="res://assets/gamesprites/player/cobia_hurt.png" id="6_0dcl8"]
[ext_resource type="AudioStream" uid="uid://b5es8shp5fdkr" path="res://assets/sound_effects/enemy_hurt.wav" id="6_ifsrj"]
[ext_resource type="AudioStream" uid="uid://ba2dhx680bktv" path="res://assets/sound_effects/change_direction.wav" id="7_ttamd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g8o0m"]
radius = 60.0
height = 200.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dioe1"]
shader = ExtResource("2_d71ys")
shader_parameter/active = false
shader_parameter/tint = Color(1, 1, 1, 1)
shader_parameter/flash_interval = 0.15

[sub_resource type="AtlasTexture" id="AtlasTexture_g8ql0"]
atlas = ExtResource("3_qktkv")
region = Rect2(0, 0, 60, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7sjw"]
atlas = ExtResource("3_qktkv")
region = Rect2(60, 0, 60, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_f51o7"]
atlas = ExtResource("3_qktkv")
region = Rect2(120, 0, 60, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdd66"]
atlas = ExtResource("3_qktkv")
region = Rect2(180, 0, 60, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dy5j"]
atlas = ExtResource("3_qktkv")
region = Rect2(240, 0, 60, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_k86db"]
atlas = ExtResource("3_qktkv")
region = Rect2(300, 0, 60, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwisa"]
atlas = ExtResource("3_qktkv")
region = Rect2(360, 0, 60, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc4jk"]
atlas = ExtResource("3_qktkv")
region = Rect2(420, 0, 60, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bbmd"]
atlas = ExtResource("3_qktkv")
region = Rect2(480, 0, 60, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_51t1s"]
atlas = ExtResource("3_qktkv")
region = Rect2(540, 0, 60, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvsqg"]
atlas = ExtResource("3_qktkv")
region = Rect2(600, 0, 60, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q2ho"]
atlas = ExtResource("3_qktkv")
region = Rect2(660, 0, 60, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp6qi"]
atlas = ExtResource("3_vp4te")
region = Rect2(135, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwenq"]
atlas = ExtResource("3_vp4te")
region = Rect2(90, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_36acy"]
atlas = ExtResource("2_nq0sg")
region = Rect2(0, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7j2f"]
atlas = ExtResource("2_nq0sg")
region = Rect2(45, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_klb5r"]
atlas = ExtResource("2_nq0sg")
region = Rect2(90, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_nc7l1"]
atlas = ExtResource("2_nq0sg")
region = Rect2(135, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_57fd3"]
atlas = ExtResource("2_nq0sg")
region = Rect2(180, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6ygr"]
atlas = ExtResource("2_nq0sg")
region = Rect2(225, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_52bi1"]
atlas = ExtResource("2_nq0sg")
region = Rect2(270, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpidt"]
atlas = ExtResource("2_nq0sg")
region = Rect2(315, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3g6p"]
atlas = ExtResource("2_nq0sg")
region = Rect2(360, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_jaimf"]
atlas = ExtResource("2_nq0sg")
region = Rect2(405, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1hjb"]
atlas = ExtResource("4_ch8lo")
region = Rect2(0, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjthd"]
atlas = ExtResource("4_ch8lo")
region = Rect2(45, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkvyv"]
atlas = ExtResource("4_ch8lo")
region = Rect2(90, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqdu8"]
atlas = ExtResource("4_ch8lo")
region = Rect2(135, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdcmc"]
atlas = ExtResource("4_ch8lo")
region = Rect2(180, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr7vt"]
atlas = ExtResource("4_ch8lo")
region = Rect2(225, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvvjs"]
atlas = ExtResource("4_ch8lo")
region = Rect2(270, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckgep"]
atlas = ExtResource("4_ch8lo")
region = Rect2(315, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvg3o"]
atlas = ExtResource("4_ch8lo")
region = Rect2(360, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lem8"]
atlas = ExtResource("4_ch8lo")
region = Rect2(405, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_io8w3"]
atlas = ExtResource("4_ch8lo")
region = Rect2(450, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8yx1"]
atlas = ExtResource("4_ch8lo")
region = Rect2(495, 0, 45, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_5hsji"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8ql0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7sjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f51o7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdd66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dy5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k86db")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwisa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc4jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bbmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51t1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvsqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q2ho")
}],
"loop": false,
"name": &"death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp6qi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwenq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36acy")
}],
"loop": false,
"name": &"flip_run",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_36acy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7j2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klb5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nc7l1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57fd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6ygr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52bi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpidt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3g6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaimf")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwenq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp6qi")
}],
"loop": false,
"name": &"idle_to_run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1hjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjthd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkvyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqdu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdcmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr7vt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvvjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckgep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvg3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lem8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io8w3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8yx1")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp6qi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwenq")
}],
"loop": false,
"name": &"run_to_idle",
"speed": 10.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bmv82"]
shader = ExtResource("2_d71ys")
shader_parameter/active = true
shader_parameter/tint = Color(1, 1, 1, 1)
shader_parameter/flash_interval = 0.2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7wxl6"]
size = Vector2(126, 125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e4u7e"]
size = Vector2(10, 178.25)

[node name="Cobia" type="CharacterBody2D"]
texture_filter = 1
collision_mask = 12
script = ExtResource("1_bhlcw")
SPEED = 400.0
floor_travel_distance = 350
downward_travel_offset = 20

[node name="MoveLane" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_16oy4")
volume_db = 7.0

[node name="GotDamaged" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_f60s8")
volume_db = 10.0

[node name="CollectSeed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_bglrd")
volume_db = 10.0

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_heybk")
volume_db = 7.0

[node name="EnemyHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ifsrj")
volume_db = 10.0

[node name="ChangeDirection" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ttamd")
volume_db = 10.0

[node name="Shadow" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.678431)
position = Vector2(0, 109.887)
scale = Vector2(5, 5)
texture = ExtResource("2_ht68y")

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 13)
shape = SubResource("CapsuleShape2D_g8o0m")

[node name="CobiaSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_dioe1")
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_5hsji")
animation = &"run"
autoplay = "run"
metadata/_edit_lock_ = true

[node name="CobiaHurt" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_bmv82")
position = Vector2(0, 6)
scale = Vector2(5, 5)
texture = ExtResource("6_0dcl8")
metadata/_edit_lock_ = true

[node name="WallDetector" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetector"]
position = Vector2(0, 24.5)
shape = SubResource("RectangleShape2D_7wxl6")
debug_color = Color(0.732743, 0.447599, 0.40903, 0.42)

[node name="FlipCooldown" type="Timer" parent="."]
process_callback = 0
wait_time = 0.4
one_shot = true

[node name="TimeBeforeIdle" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="RightDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightDetector"]
position = Vector2(65, 10.25)
shape = SubResource("RectangleShape2D_e4u7e")
debug_color = Color(0.385756, 0.602147, 0.320482, 0.42)

[node name="LeftDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftDetector"]
position = Vector2(-64.675, 10.875)
shape = SubResource("RectangleShape2D_e4u7e")
debug_color = Color(0.385756, 0.602147, 0.320482, 0.42)

[node name="FlashEndTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 1.5
one_shot = true

[connection signal="body_entered" from="WallDetector" to="." method="_on_wall_detector_body_entered"]
[connection signal="timeout" from="FlipCooldown" to="." method="_on_flip_cooldown_timeout"]
[connection signal="timeout" from="TimeBeforeIdle" to="." method="_on_time_before_idle_timeout"]
[connection signal="body_entered" from="RightDetector" to="." method="_on_right_detector_body_entered"]
[connection signal="body_entered" from="LeftDetector" to="." method="_on_left_detector_body_entered"]
[connection signal="timeout" from="FlashEndTimer" to="." method="_on_flash_end_timer_timeout"]
